--- a/styles.scss
+++ b/styles.scss
@@ -16,5 +16,15 @@ html {
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(15, 15, 15);
-    color: beige;
+    color: rgb(157, 157, 140);
+    padding: 1rem;
+}
+
+.section {
+    margin: 1rem 0;
+}
+
+.actionList {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
 }
