--- a/styles.scss
+++ b/styles.scss
@@ -25,10 +25,18 @@ body {
     border-radius: 10px;
     padding: 0.4rem 0.8rem;
     margin: 0.6rem 0;
+    font-size: 0.8rem;
+
 }
 
 .actionHistory {
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
-    font-size: 0.8rem;
+
+}
+
+.addActionForm {
+    & #last-input {
+        display: inline;
+    }
 }
